Fix mobile navigation: table row click handler + dropdown real links
- Replace position:absolute anchor in matchday table with (click) handler;
  position:relative on <tr> is undefined in CSS spec and broken on mobile Safari
- Convert user dropdown buttons to <a routerLink> for proper link semantics

--- a/webapp/src/app/shell/topbar/topbar.component.scss
+++ b/webapp/src/app/shell/topbar/topbar.component.scss
@@ -233,6 +233,7 @@
         border: none;
         cursor: pointer;
         text-align: left;
+        text-decoration: none;
         transition: background-color $transition-fast;
 
         &:hover { background-color: $color-surface-alt; }
